--- a/app/views/book_collections/index.html.erb
+++ b/app/views/book_collections/index.html.erb
@@ -1,5 +1,5 @@
 <div class="book_collections index">
-    <h2>Book Collections</h2>
+    <h2>Book Collection</h2>
     <h2>This is a test version!</h2>
 
     <%# Display flash notice if it exists %>
