Member object added

--- a/app/views/book_collections/index.html.erb
+++ b/app/views/book_collections/index.html.erb
@@ -1,6 +1,6 @@
 <div class="book_collections index">
     <h2>Book Collection</h2>
-    <h2>This is a test version!</h2>
+    <h2>This is a test version we are chainging it from here </h2>
 
     <%# Display flash notice if it exists %>
     <% flash.each do |name, msg| %>
