--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,5 +3,5 @@
 
 <%= link_to('Categories', categories_path)%><br />
 <%= link_to('Book Collections', book_collections_path) %><br />
-
+<%= link_to('Members',members_path)%><br/>
 <%= link_to('About', {action: 'about', page: 5, id: 20}) %><br />
