--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -24,8 +24,10 @@
         <td><%= link_to 'Show', member %></td>
         <td><%= link_to 'Edit', edit_member_path(member) %></td>
         <td><%= link_to 'Destroy', member, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit Weekly Points', edit_weekly_points_member_path(member) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 <%= link_to 'New Member', new_member_path %>
+<%= link_to 'Bulk Edit Weekly Points', bulk_edit_points_members_path %>
