--- a/app/views/members/bulk_edit_points.html.erb
+++ b/app/views/members/bulk_edit_points.html.erb
@@ -21,4 +21,8 @@
   </table>
 
   <%= submit_tag "Update Points" %>
+
+  <div>
+    <%= link_to "Back to members", members_path %>
+  </div>
 <% end %>
