--- a/app/views/members/edit_weekly_points.html.erb
+++ b/app/views/members/edit_weekly_points.html.erb
@@ -9,4 +9,8 @@
   <div class="actions">
     <%= f.submit "Update Points" %>
   </div>
+
+  <div>
+    <%= link_to "Back to members", members_path %>
+  </div>
 <% end %>
