--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -42,30 +42,32 @@
         <td><%= link_to 'Show', member %></td>
         <td><%= link_to 'Edit', edit_member_path(member) %></td>
         <td>
-          <%= form_with url: member_path(member), method: :delete, class: 'delete-member-form' do %>
+          <%= form_with url: member_path(member), method: :delete, class: 'delete-member-form', local: true do %>
             <%= submit_tag 'Delete', class: 'link-like-button' %>
           <% end %>
         </td>
-        <td><%= link_to 'Edit Weekly Points', edit_weekly_points_member_path(member) %></td>
+        <td><%= link_to 'Add Weekly Points', edit_weekly_points_member_path(member) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 <%= link_to 'New Member', new_member_path %>
-<%= link_to 'Bulk Edit Weekly Points', bulk_edit_points_members_path %>
+<%= link_to 'Bulk Add Weekly Points', bulk_edit_points_members_path %>
+<%= link_to 'Officer Points View', officer_index_members_path %>
 
 
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
-    var deleteForms = document.querySelectorAll('.delete-member-form');
+document.addEventListener("DOMContentLoaded", function() {
+  var deleteForms = document.querySelectorAll('.delete-member-form');
 
-    deleteForms.forEach(function(form) {
-      form.addEventListener('submit', function(e) {
-        if (!window.confirm('Are you sure you want to delete this member?')) {
-          e.preventDefault();
-        }
-      });
+  deleteForms.forEach(function(form) {
+    form.addEventListener('submit', function(e) {
+      if (!window.confirm('Are you sure you want to delete this member?')) {
+        e.preventDefault();
+      }
     });
   });
+});
 </script>
+
 
