--- a/app/views/members/_member.html.erb
+++ b/app/views/members/_member.html.erb
@@ -1,27 +1,23 @@
 <div id="<%= dom_id member %>">
+
   <p>
-    <strong>Totalpoints:</strong>
-    <%= member.totalPoints %>
+    <strong>Full Name:</strong>
+    <%= member.full_name %>
   </p>
 
   <p>
-    <strong>Weeklypoints:</strong>
-    <%= member.weeklyPoints %>
-  </p>
-
-  <p>
-    <strong>Namefirst:</strong>
-    <%= member.nameFirst %>
-  </p>
-
-  <p>
-    <strong>Namelast:</strong>
-    <%= member.nameLast %>
+    <strong>Email:</strong>
+    <%= member.email %>
   </p>
 
   <p>
     <strong>Position:</strong>
     <%= member.position %>
+  </p>
+
+  <p>
+    <strong>Totalpoints:</strong>
+    <%= member.totalPoints %>
   </p>
 
 </div>
