--- a/app/views/members/_new_form.html.erb
+++ b/app/views/members/_new_form.html.erb
@@ -12,13 +12,8 @@
   <% end %>
 
   <div>
-    <%= form.label :nameFirst, "First Name", style: "display: block" %>
-    <%= form.text_field :nameFirst %>
-  </div>
-
-  <div>
-    <%= form.label :nameLast, "Last Name", style: "display: block" %>
-    <%= form.text_field :nameLast %>
+    <%= form.label :full_name, "Full Name", style: "display: block" %>
+    <%= form.text_field :full_name %>
   </div>
 
   <div>
