--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -22,10 +22,9 @@
   <thead>
     <tr>
       <th>ID</td>
-      <th>First Name</th>
-      <th>Last Name</th>
+      <th>Full Name</th>
+      <th>Email</th>
       <th>Position</th>
-      <th>Weekly Points</th>
       <th>Total Points</th>
       <th colspan="3"></th>
     </tr>
@@ -34,10 +33,9 @@
     <% @members.each do |member| %>
       <tr>
         <td><%= member.id %></td>
-        <td><%= member.nameFirst %></td>
-        <td><%= member.nameLast %></td>
+        <td><%= member.full_name %></td>
+        <td><%= member.email %></td>
         <td><%= member.position %></td>
-        <td><%= member.weeklyPoints %></td>
         <td><%= member.totalPoints %></td>
         <td><%= link_to 'Show', member %></td>
         <td><%= link_to 'Edit', edit_member_path(member) %></td>
@@ -46,13 +44,11 @@
             <%= submit_tag 'Delete', class: 'link-like-button' %>
           <% end %>
         </td>
-        <td><%= link_to 'Add Weekly Points', edit_weekly_points_member_path(member) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 <%= link_to 'New Member', new_member_path %>
-<%= link_to 'Bulk Add Weekly Points', bulk_edit_points_members_path %>
 <%= link_to 'Officer Points View', officer_index_members_path %>
 
 
