--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -4,7 +4,9 @@
 <% if admin_signed_in? %>
   <p>Here, you can provide options or links specific to logged-in admins.</p>
   <%= link_to 'View Members', members_path %><br>
-  <%= link_to 'View Officer Members', officer_index_members_path %>
+  <%= link_to 'View Officer Members', officer_index_members_path %><br>
+  <%= link_to 'View Events', events_path %><br>  <!-- Added this line -->
+  <%= link_to 'View Attendance', attendances_path %>  <!-- Added this line -->
 <% else %>
   <p>You need to sign in to view admin-specific content.</p>
 <% end %>
