Minor Changes to Usability while adding member view

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -60,6 +60,8 @@
         <div class="links">
           <%= link_to 'View Members', members_path %><br>
           <%= link_to 'View Officer Members', officer_index_members_path %><br>
+          <%= link_to 'View Events', events_path %><br>
+          <%= link_to 'View Attendance', attendances_path %><br>
         </div>
       </div>  
     <% end %>
@@ -92,3 +94,4 @@
   </script>
 </body>
 </html>
+
