--- a/app/views/members/officer_index.html.erb
+++ b/app/views/members/officer_index.html.erb
@@ -43,8 +43,9 @@
   </tbody>
 </table>
 <%= link_to "Back to members", members_path %>
+<% if @current_member&.position != 'Member' %>
 <%= link_to 'Bulk Add Officer Points', bulk_edit_officer_points_members_path %>
-
+<%end%>
 
 <script>
 document.addEventListener("DOMContentLoaded", function() {
