--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,27 +1,31 @@
-<div id="<%= dom_id event %>">
-  <p>
-    <strong>Title:</strong>
-    <%= event.title %>
-  </p>
 
-  <p>
-    <strong>Score:</strong>
-    <%= event.score %>
-  </p>
+<style>
 
-  <p>
-    <strong>Password:</strong>
-    <%= event.password %>
-  </p>
 
-  <p>
-    <strong>Start time:</strong>
-    <%= event.start_time %>
-  </p>
 
-  <p>
-    <strong>End time:</strong>
-    <%= event.end_time %>
-  </p>
+</style>
 
+
+<div id="<%= dom_id event %>" class="custom-col mt-3">
+  <div class="card bg-light">
+    <div class="card-body" >
+      <h5 class="card-title"><%= event.title %></h5>
+
+      <p class="card-text">
+        <strong>Score:</strong> <%= event.score %>
+      </p>
+      <% if current_member&.position != 'Member' %>
+      <p class="card-text">
+        <strong>Password:</strong> <%= event.password %>
+      </p>
+      <%end%>
+      <p class="card-text">
+        <strong>Start time:</strong> <%= event.start_time %>
+      </p>
+
+      <p class="card-text">
+        <strong>End time:</strong> <%= event.end_time %>
+      </p>
+    </div>
+  </div>
 </div>
