--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -16,13 +16,13 @@
       position: fixed;
       top: 10px;
       left: 50px;
-      max-width: 100px;
+      width: 100px;
     }
     .profile-icon {
   position: fixed;
   top: 10px;
   right: 50px; 
-  max-width: 30px; 
+  width: 100px; 
   cursor: pointer;
 }
 
@@ -281,6 +281,11 @@
 
 </body>
 </html>
+
+
+
+
+
 
 
 
