--- a/app/views/members/officer_index.html.erb
+++ b/app/views/members/officer_index.html.erb
@@ -1,4 +1,6 @@
 <!-- app/views/members/index.html.erb -->
+<!DOCTYPE html>
+<html lang="en">
 
 <style>
   .link-like-button {
@@ -16,6 +18,270 @@
     text-decoration: underline;
   }
 </style>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Dashboard</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link href="https://fonts.cdnfonts.com/css/mustopha" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 50px;
+    }
+
+    h2 {
+      color: #333;
+    }
+
+    p {
+      color: #666;
+    }
+
+    a {
+      color: #007bff;
+      text-decoration: none;
+      margin: 5px;
+    }
+
+    .admin-links,
+    .user-links {
+      display: block; 
+    }
+
+    .user-links,
+    .admin-info {
+      display: block; 
+    }
+
+    .toggle-links-button {
+      padding: 10px;
+      margin: 10px;
+      cursor: pointer;
+    }
+
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    li {
+      display: inline;
+      margin-right: 10px;
+    }
+
+    nav {
+      background-color: #007bff;
+      padding: 5px; 
+    }
+
+    nav a {
+      color: #fff;
+    }
+
+    .header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: #007bff;
+      padding: 5px; 
+      color: #fff;
+    }
+
+    .content {
+      margin-top: 60px; 
+    }
+
+    .navbar {
+      background-color: #007bff;
+      padding: 5px;
+      width: 57%;
+      margin: auto; 
+      margin-top: 15vh; 
+      display: flex;
+      align-items: center; 
+      justify-content: space-evenly;
+      z-index: 1000;
+    }
+
+    .navbar a {
+      color: #fff;
+    }
+
+
+    .navbar .active a {
+      background-color: #C0C0C0; 
+      color: #007bff; 
+      border-radius: 5px; 
+      
+    }
+
+    .member-navbar {
+      width: 30%;
+    }
+    @import url('https://fonts.googleapis.com/css2?family=Lateef&display=swap');
+
+
+    .side-header {
+      transform: rotate(270deg);
+      position: fixed;
+      top: 75%; 
+      left: 13%; 
+      transform-origin: bottom left; 
+      letter-spacing: 0.8em; 
+      font-size: 120px; 
+      font-family: 'Mustopha'; 
+    }
+
+
+  </style>
+</head>
+<body>
+
+
+
+
+  <% if admin_signed_in? %>
+    <% current_member = Member.find_by(email: current_admin.email) %>
+
+    <% if current_member&.position == 'President' %>
+      <div class="links">
+      <div class="admin-links">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    
+    <ul class="navbar-nav">
+      <li class="nav-item">
+      <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
+      </li>
+
+
+
+      <li class="nav-item">
+        <%= link_to 'Members', members_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item active">
+        <%= link_to 'Officer Members', officer_index_members_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Events', events_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Officer Entries', officer_entries_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Finances', finances_path, class: 'nav-link' %>
+      </li>
+    </ul>
+  </div>
+</nav>
+        <h2 class = "title">Officer Leaderboard</h2>
+        
+      </div>
+      <% elsif current_member&.position == 'Officer' %>
+      <h2>Officer Dashboard</h2>
+      <div class="links">
+      <div class="admin-links">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+      <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
+      </li>
+
+
+
+      <li class="nav-item">
+        <%= link_to 'Members', members_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Officer Members', officer_index_members_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Events', events_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Officer Entries', officer_entries_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Finances', finances_path, class: 'nav-link' %>
+      </li>
+    </ul>
+  </div>
+</nav>
+<h2>Officer Leaderboard</h2>
+    <% else %>
+      <div class="admin-info">
+        <h2>Member Dashboard</h2>
+        
+        <div class="links">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light member-navbar fixed-top">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+          <%= link_to 'Members', members_path, class: 'nav-link' %>
+        </li>
+          <li class="nav-item">
+            <%= link_to 'Events', events_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Leaderboard', events_path, class: 'nav-link' %>
+          </li>
+        </ul>
+      </nav>
+        </div>
+      </div>  
+    <% end %>
+  <% end %>
+  <h1 class="side-header">IMSA</h1>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    var adminLinks = document.querySelector('.links');
+    var userLinks = document.querySelector('.user-links');
+    var adminInfo = document.querySelector('.admin-info');
+    var toggleButtons = document.querySelectorAll('.toggle-links-button');
+
+    toggleButtons.forEach(function(button) {
+      button.addEventListener('click', function() {
+        console.log(adminInfo.style.display); 
+        adminLinks.style.display = adminLinks.style.display === 'none' ? 'block' : 'none';
+        if(adminInfo.style.display == 'none' || adminInfo.style.display == ''){
+          adminInfo.style.display = 'block'; 
+        } else {
+          adminInfo.style.display = "none"; 
+        }
+      });
+    });
+  });
+</script>
+
+</body>
 
 <h1>Officers</h1>
 <table>
@@ -61,4 +327,4 @@ document.addEventListener("DOMContentLoaded", function() {
 });
 </script>
 
-
+</html>
