--- a/app/views/members/officer_index.html.erb
+++ b/app/views/members/officer_index.html.erb
@@ -22,7 +22,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard</title>
+  <title>President Dashboard</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="https://fonts.cdnfonts.com/css/mustopha" rel="stylesheet">
   <style>
@@ -188,69 +188,47 @@
         <h2 class = "title">Officer Leaderboard</h2>
         
       </div>
-      <% elsif current_member&.position == 'Officer' %>
-      <h2>Officer Dashboard</h2>
-      <div class="links">
-      <div class="admin-links">
+      
+    <% else %>
+    <h2>Officer Leaderboard</h2>
+    <div class="links">
+    <div class="admin-links">
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarNav">
   
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-      <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
-      </li>
+  <ul class="navbar-nav">
+    <li class="nav-item active">
+    <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
+    </li>
 
 
 
-      <li class="nav-item">
-        <%= link_to 'Members', members_path, class: 'nav-link' %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Officer Members', officer_index_members_path, class: 'nav-link' %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Events', events_path, class: 'nav-link' %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Officer Entries', officer_entries_path, class: 'nav-link' %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Finances', finances_path, class: 'nav-link' %>
-      </li>
-    </ul>
-  </div>
+    <li class="nav-item">
+      <%= link_to 'Members', members_path, class: 'nav-link' %>
+    </li>
+    <li class="nav-item active">
+      <%= link_to 'Officer Members', officer_index_members_path, class: 'nav-link' %>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'Events', events_path, class: 'nav-link' %>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'Officer Entries', officer_entries_path, class: 'nav-link' %>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'Finances', finances_path, class: 'nav-link' %>
+    </li>
+  </ul>
+</div>
 </nav>
 <h2>Officer Leaderboard</h2>
-    <% else %>
-      <div class="admin-info">
-        <h2>Member Dashboard</h2>
-        
-        <div class="links">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light member-navbar fixed-top">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item">
-          <%= link_to 'Members', members_path, class: 'nav-link' %>
-        </li>
-          <li class="nav-item">
-            <%= link_to 'Events', events_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item">
-            <%= link_to 'Leaderboard', events_path, class: 'nav-link' %>
-          </li>
-        </ul>
-      </nav>
-        </div>
-      </div>  
     <% end %>
   <% end %>
   <h1 class="side-header">IMSA</h1>
