--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -251,6 +251,25 @@
   <a href="<%= profile_path %>">
   <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
   </a>
+    <div class="container my-5 pt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-5 mb-3">
+            <%= link_to 'https://www.groupme.com/', target: "_blank" do %>
+                <%= image_tag 'groupme_logo.png', alt: 'First Image', class: 'img-fluid rounded' %>
+            <% end %>
+        </div>
+        <div class="col-md-5 mb-3">
+            <%= link_to 'https://www.instagram.com/', target: "_blank" do %>
+                <%= image_tag 'instagram_logo.png', alt: 'Second Image', class: 'img-fluid rounded', style: 'width:80%;' %>
+            <% end %>
+        </div>
+    </div>
+</div>
+
+</div>
+
+
+
   <h1 class="side-header">IMSA</h1>
 </div>
 
