Changed pending member message.

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -223,7 +223,8 @@
 </nav>
 <h2>Officer Dashboard</h2>
     <% elsif current_member&.position == 'Pending' %>
-      <h2>Your membership is pending</h2>
+      <h2>Your membership is pending...</h2>
+      <h2>You won't be approved for an account unless you're a paid member of TAMU IMSA.</h2>
     <% else %>
       <div class="admin-info">
         <h2>Member Dashboard</h2>
