--- a/app/views/finances/index.html.erb
+++ b/app/views/finances/index.html.erb
@@ -1,17 +1,266 @@
-<p style="color: green"><%= notice %></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Dashboard</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link href="https://fonts.cdnfonts.com/css/mustopha" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 50px;
+    }
 
-<h1>Finances</h1>
+    h3 {
+      color: #333;
+      font-size: 25px;
+    }
 
-<div id="finances">
-  <% @finances.each do |finance| %>
-    <%= render finance %>
-    <p>
-      <%= link_to "Show this finance", finance %>
-    </p>
+    h2.title {
+      color: #333;
+      margin-top: 30px;
+      left: 41.25%;
+    }
+
+    p {
+      color: #666;
+    }
+
+    a {
+      color: #007bff;
+      text-decoration: none;
+      margin: 5px;
+    }
+
+    .admin-links,
+    .user-links {
+      display: block; 
+    }
+
+    .user-links,
+    .admin-info {
+      display: block; 
+    }
+
+    .toggle-links-button {
+      padding: 10px;
+      margin: 10px;
+      cursor: pointer;
+    }
+
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    li {
+      display: inline;
+      margin-right: 10px;
+    }
+
+    nav {
+      background-color: #007bff;
+      padding: 5px; 
+    }
+
+    nav a {
+      color: #fff;
+    }
+
+    .navbar {
+      background-color: #007bff;
+      padding: 5px;
+      width: 55%;
+      margin: auto; 
+      margin-top: 5vh;
+    }
+
+    .navbar a {
+      color: #fff;
+    }
+
+    .navbar .active a {
+      background-color: #C0C0C0; 
+      color: #007bff; 
+      border-radius: 5px; 
+    }
+
+    .navbar-nav {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
+
+    .member-navbar {
+      width: 30%;
+    }
+    @import url('https://fonts.googleapis.com/css2?family=Lateef&display=swap');
+
+
+    .side-header {
+      transform: rotate(270deg);
+      position: fixed;
+      top: 70%; 
+      left: 200px; 
+      transform-origin: bottom left; 
+      letter-spacing: 0.8em; 
+      font-size: 120px; 
+      font-family: 'Mustopha'; 
+    }
+
+    .floating-button {
+      position: fixed;
+      bottom: 40px;
+      right: 40px;
+    }
+
+    .finances {
+      margin-top: 30px;
+    }
+
+    .newFinance button{
+      background-color: #C0C0C0;
+      color: #333;
+      border: 2px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .newFinance button:hover{
+      background-color: #f9f9f9;
+    }
+
+    .showFinance button{
+      background-color: #C0C0C0;
+      color: #333;
+      border: 2px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .showFinance button:hover{
+      background-color: #f9f9f9;
+    }
+
+    .pending-finance-box {
+      border: 2px solid #ccc;
+      border-radius: 5px;
+      padding: 10px;
+      max-width: 600px;
+      margin: auto;
+      background-color: #f9f9f9;
+      margin-bottom: 10px;
+    }
+
+    .completed-finance-box {
+      border: 2px solid #ccc;
+      border-radius: 5px;
+      padding: 10px;
+      max-width: 600px;
+      margin: auto;
+      background-color: #f9f9f9;
+      margin-bottom: 10px;
+    }
+
+  </style>
+</head>
+<body>
+
+<% if admin_signed_in? %>
+  <% current_member = Member.find_by(email: current_admin.email) %>
+
+  <% if current_member&.position == 'Admin' %>
+    <h2 class = "title">Finance Requests</h2>
+    
+    <div class="links">
+      <div class="admin-links">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Members', members_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Events', events_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item active">
+                <%= link_to 'Finances', finances_path, class: 'nav-link' %>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
+
+    <div class="finances">
+      <h3> Pending </h3>
+      <% @finances.each do |finance| %>
+        <div class = "finance">
+          <% if !finance.resolved? %>
+            <div class="pending-finance-box">
+              <%= render finance %>
+                <div class="showFinance">
+                  <p>
+                    <%= link_to finance do %>
+                      <button type="button">Show this finance</button>
+                    <% end %>
+                  </p>
+                </div>
+            </div>
+          <% end %>
+        </div>
+        </div>
+      <% end %>
+
+      <h3> Completed </h3>
+        <% @finances.each do |finance| %>
+          <div class = "finance">
+            <% if finance.resolved? %>
+              <div class="completed-finance-box">
+                <%= render finance %>
+                <div class="showFinance">
+                  <p>
+                    <%= link_to finance do %>
+                      <button type="button">Show this finance</button>
+                    <% end %>
+                  </p>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="floating-button">
+      <div class = "newFinance">
+        <% if @current_member&.position != 'Member' %>
+          <%= link_to new_finance_path do %>
+            <button type="button">Create Finance</button>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+
   <% end %>
-</div>
-
-<% if @current_member&.position != 'Member' %>
-  <%= link_to "New finance", new_finance_path %>
+  <h1 class="side-header">IMSA</h1>
 <% end %>
-<%= link_to "Dashboard", root_path %>
