--- a/app/views/events/index.erb.html
+++ b/app/views/events/index.erb.html
@@ -186,7 +186,7 @@
             </li>
           </ul>
         </nav>
-        <h2>Officer Dashboard</h2>
+      
       </div>
     <% end %>
   <% end %>
@@ -195,7 +195,6 @@
 
 <div style="color: green"><%= notice %></div>
 
-<h1>Events</h1>
 
 <div class="container">
   <div class="row">
@@ -208,7 +207,7 @@
               <p>
                 <%= link_to "Show this event", event %>
               </p>
-              <%= link_to "Attend", attend_event_path(event) %>
+              <%= link_to "Attfend", attend_event_path(event) %>
               <hr>
             </div>
           </div>
