--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -37,6 +37,11 @@
   </div>
 
   <div>
+    <%= form.label :image, style: "display: block" %>
+    <%= form.file_field :image %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
