Added images to events as well as added a divider to the finance request view and fixed the finance editing issue I was having

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -25,8 +25,7 @@
   </p>
 
   <p>
-    <strong>Image:</strong>
-    <%= event.image %>
+    <strong>Image:</strong> <br> <!-- Line break after the Receipt image -->
+    <%= image_tag "data:image/png;base64,#{event.image}", alt: 'Image' if event.image.present? %>
   </p>
-
 </div>
