--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -38,6 +38,10 @@
 
   <div>
     <%= form.label :image, style: "display: block" %>
+    <% if event.image.present? %>
+      <%= image_tag "data:image/png;base64,#{event.image}", alt: 'Image' if event.image.present? %>
+    <% end %>
+    <br>
     <%= form.file_field :image %>
   </div>
 
