--- a/app/views/members/officer_index.html.erb
+++ b/app/views/members/officer_index.html.erb
@@ -273,7 +273,6 @@
       <th>Email</th>
       <th>Position</th>
       <th>Officer Points</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
   <tbody>
@@ -284,7 +283,6 @@
         <td><%= member.email %></td>
         <td><%= member.position %></td>
         <td><%= member.officer_points %></td>
-        <td><%= link_to 'Add Officer Points', edit_officer_points_member_path(member) %></td>
       </tr>
     <% end %>
   </tbody>
@@ -292,6 +290,7 @@
 <%= link_to "Back to members", members_path %>
 <% if @current_member&.position != 'Member' %>
 <%= link_to 'Bulk Add Officer Points', bulk_edit_officer_points_members_path %>
+<%= link_to 'Add Officer Points', new_officer_entry_path %>
 <%end%>
 
 <script>
